<resources>
    <string name="app_name">CapAI-XML</string>
    <string name="select_image">Select Image</string>
    <string name="no_image_selected">No Image selected. Select an image by\n tapping the button below.</string>
    <string name="select_video">Select Video</string>
    <string name="no_video_selected">No video selected.Please select a video\n by clicking the button below.</string>
    <string name="generate_caption">Generate Caption</string>
    <string name="short_captions_are_of_2_3_lines_per_platform">Short captions are of 2–3 lines per platform</string>
    <string name="Long">Long</string>
    <string name="Short">Short</string>
    <string name="select_caption_length">Select Caption Length</string>
    <string name="this_is_the_area_where_the_picture_will_show">This is the area where\nthe picture will show</string>
    <string name="caption_preferences">Caption Preferences</string>
    <string name="generated_captions">Generated Captions</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_caption">Golden hour vibes hitting different today. Nature\'s masterpiece painted across the sky, reminding us to pause and appreciate the beauty around us.\n\nSometimes the best moments are the ones where you just stop and stare. \n\n#GoldenHour #SunsetVibes #NaturePhotography #BeautifulSky #PeacefulMoments #SunsetLovers</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="caption_translation">Caption Translation</string>
    <string name="select_translation_language">Select Translation Language</string>
    <string name="capai">CapAI</string>
    <string name="add_new_item">Add New Item</string>
    <string name="add_image">Add Image</string>
    <string name="add_video">Add Video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">323308290301-2agvq626ukglojv7u1v9cnbjcumhs4m6.apps.googleusercontent.com</string>
    <string name="logout">Logout</string>
</resources>